Fixed the size if the lightbox on tablets by usind dvh instead of vh

--- a/assets/scss/snap-gallery.scss
+++ b/assets/scss/snap-gallery.scss
@@ -55,12 +55,10 @@ $gap: var(--gap);
   /** Position and style */
   position: fixed;
   z-index: 999;
-  width: 100%;
-  height: 100%;
+  inset: 0;
+  height: 100dvh;
   align-items: center;
   justify-content: center;
-  top: 0;
-  left: 0;
   background: rgba(0, 0, 0, 0.8);
 }
 
@@ -95,10 +93,9 @@ $gap: var(--gap);
   flex-direction: column;
 
   img {
-    max-height: 80vh;
+    max-height: 80dvh;
     width: auto;
     max-width: 100%;
-    object-fit: contain;
   }
 }
 
